@@ -11,6 +11,7 @@ entire history of the project is available through SVN.
 --- 2007-11-XX  Release 7.11.0                                     ---
 ----------------------------------------------------------------------
 
+* MGED now runs in the foreground by default - Erik Greenwald
 * fixed g-dxf bug where incorrect object name is assigned - Bob Parker
 * fixed browser-based mged help on Mac OS X - Sean Morrison
 * added rest of BRL-CAD's geometry converters for Windows - Bob Parker
